crates/uitest/fixtures/ty_check/for_.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/for_.fe
---
error[8-0000]: type mismatch
   ┌─ for_.fe:16:9
   │
16 │     for Bar { x } in foo_arr {
   │         ^^^^^^^^^ expected `Foo`, but `Bar` is given

error[8-0019]: left-hand side of assignment is immutable
   ┌─ for_.fe:17:9
   │
15 │     let res = 0
   │         --- try changing to `mut res`
16 │     for Bar { x } in foo_arr {
17 │         res += x
   │         ^^^ immutable assignment

error[8-0021]: `Iterator` needs to be implemented for Foo
   ┌─ for_.fe:11:14
   │
11 │     for i in foo { }
   │              ^^^
   │              │
   │              `Iterator` needs to be implemented for `Foo`
   │              consider implementing `Iterator` for `Foo`


